--- a/index.html
+++ b/index.html
@@ -15,14 +15,6 @@
         <div class="controls">
             <div class="params">
                 <div>
-                    <label>X</label>
-                    <input type="range" min="-100" max="100" id="x" value="0"/>
-                </div>
-                <div>
-                    <label>Y</label>
-                    <input type="range" min="-100" max="100" id="y" value="0"/>
-                </div>
-                <div>
                     <label>Pitch</label>
                     <input type="range" min="0" max="360" id="pitch" value="45"/>
                 </div>
@@ -34,6 +26,10 @@
                     <label>Roll</label>
                     <input type="range" min="0" max="360" id="roll" value="45"/>
                 </div>
+                <div>
+                    <label>Perspective</label>
+                    <input type="range" min="1" max="5" step="0.2" id="perspective" value="1"/>
+                </div>
             </div>
 
 
@@ -41,6 +37,11 @@
                 <button onclick="autoPitch += 1; autoPitch = autoPitch % 2; AutoRotate()" id="spin-button">Spin Pitch</button>
                 <button onclick="autoYaw += 1; autoYaw = autoYaw % 2; AutoRotate()" id="spin-button">Spin Yaw</button>
                 <button onclick="autoRoll += 1; autoRoll = autoRoll % 2; AutoRotate()" id="spin-button">Spin Roll</button>
+            </div>
+
+            <div class="cube-model">
+                <button onclick="setCubeType(0);" id="spin-button">Wireframe</button>
+                <button onclick="setCubeType(1)" id="spin-button">Coloured Cube</button>
             </div>
 
         </div>
